--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,8 @@ layout: default
   <div class="date">
     Written on {{ page.date | date: "%B %e, %Y" }}
   </div>
+  
+  <a href="{{ site.baseurl }}{{ post.url }}" class="read-more">Read More</a>
 
   {% include disqus.html %}
 </article>
