--- a/_sass/_svg-icons.scss
+++ b/_sass/_svg-icons.scss
@@ -2,6 +2,11 @@
   width: 40px;
   height: 40px;
   display: inline-block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   background-repeat: no-repeat;
   background-size: contain;
 
