--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
       {{ content }}
     </div>
 
-    {% if page.comments %}
+    <!--{% if page.comments %}
       <div id="disqus_thread"></div>
       <script type="text/javascript">
           /* * * CONFIGURATION VARIABLES * * */
@@ -53,7 +53,7 @@
           })();
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-    {% endif %}
+    {% endif %}-->
 
     <div class="wrapper-footer">
       <div class="container">
