--- a/style.scss
+++ b/style.scss
@@ -24,9 +24,9 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0 0;
   max-width: 740px;
-  padding: 0 10px;
+  padding: 0 0;
   width: 100%;
   background: $white;
 }
