--- a/style.scss
+++ b/style.scss
@@ -195,7 +195,7 @@ img {
   margin: 0;
   color: $darkGray;
   cursor: pointer;
-  font-family: Lato, sans-serif;
+  font-family: Oswald, sans-serif;
   font-weight: 300;
   font-size: 28px;
   letter-spacing: 1px;
