--- a/style.scss
+++ b/style.scss
@@ -196,7 +196,7 @@ img {
   color: $darkGray;
   cursor: pointer;
   font-family: Oswald, sans-serif;
-  font-weight: 300;
+  font-weight: bold;
   font-size: 28px;
   letter-spacing: 1px;
 }
