--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/downloads">Downloads</a>
           </nav>
         </header>
     </div>
